[package]
name = "platoon"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ibraheemdev/matchit"

[dependencies]
futures-io = "0.3"
pin-project-lite = "0.2"
libc = "0.2"
socket2 = { version = "0.4.2", features = ["all"] }
slab = "0.4.5"
mio = { version = "0.8", features = ["os-poll", "net"] }

[dev-dependencies]
hyper = { version = "0.14.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", features = ["io"] }
static_assertions = "1.1.0"
tokio-test = "0.4.2"
